# maills

./: Cargo.nix  Cargo.toml  README.md  flake.nix  vim.lua
src/: contact_list.rs  contact_source.rs  contactlist.rs  lib.rs  mailbox.rs  main.rs  open_files.rs  vcards.rs
